second batch of changes for ghost 2.0

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     },
     "keywords": [
         "ghost",
-        "theme"
+        "theme",
+        "ghost-theme"
     ],
     "repository": {
         "type": "git",
